--- a/templates/css/table.css
+++ b/templates/css/table.css
@@ -8,7 +8,7 @@
 }
 
 .styled-table thead tr {
-  background-color: #009879;
+  background-color: #2e7eed;
   color: #ffffff;
   text-align: left;
 }
@@ -27,10 +27,10 @@
 }
 
 .styled-table tbody tr:last-of-type {
-  border-bottom: 2px solid #009879;
+  border-bottom: 2px solid #2e7eed;
 }
 
 .styled-table tbody tr.active-row {
   font-weight: bold;
-  color: #009879;
+  color: #2e7eed;
 }
