--- a/templates/css/style.css
+++ b/templates/css/style.css
@@ -2,6 +2,11 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+  scroll-behavior: smooth;
+}
+
+:root {
+  --primary-color: #2e7eed;
 }
 
 .center {
