--- a/templates/index.html
+++ b/templates/index.html
@@ -18,13 +18,17 @@
     <link rel="stylesheet" href="./css/banner.css">
     <link rel="stylesheet" href="./css/button.css">
     <link rel="stylesheet" href="./css/loading.css">
+    <link rel="stylesheet" href="./css/change-view-button.css">
     <link rel="stylesheet" href="./css/to-top-button.css">
-
-
+    <link rel="stylesheet" href="./css/to-top-button.css">
+    <link rel="stylesheet" href="./css/progress.css">
+    <link rel="stylesheet" href="./css/progress-card-styles.css">
 
     <script defer type="text/javascript" src="/eel.js"></script>
     <script defer src="./js/scroll.js"></script>
     <script defer src="./js/documentHelpers.js"></script>
+    <script defer src="./js/createTable.js"></script>
+    <script defer src="./js/createProgressBar.js"></script>
     <script defer type="text/javascript" src="./js/main.js"></script>
 </head>
 
@@ -49,6 +53,7 @@
             <div class="shape" data-aos="fade-up-right" data-aos-duration="500" data-aos-delay="100"></div>
             <div class="shape" data-aos="fade-down-left" data-aos-duration="500" data-aos-delay="0"></div>
         </div>
+
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-md-6 order-2 order-md-1 text-center text-md-left">
@@ -58,7 +63,7 @@
                     <button onclick="test();" class="btn btn-main-md">Upload Folder</button>
                 </div>
                 <div class="col-md-6 text-center order-1 order-md-2">
-                    <img class="img-fluid" src="images/mobile.png" alt="screenshot">
+                    <img class="img-fluid" src="./images/mobile.png" alt="screenshot">
                 </div>
             </div>
         </div>
@@ -77,11 +82,15 @@
         <div class="loading-wave"></div>
     </div>
 
-    <div class="center">
-        <table id="student-match-score-table" class="styled-table"></table>
+    <div id="view-data-center">
     </div>
 
     <button onclick="toTopFn()" id="scroll-to-top-btn" title="Go to top">&uarr;</button>
+    <button onclick="toggleView()" id="toggle-view-btn" data-toggle="tooltip" data-placement="top" title="Toggles the view between Progress Bars and Table View">
+            <img src="./images/icons/circle-notch-solid.svg" alt="to circle" srcset="">
+    </button>
+
+
 
 </body>
 
