--- a/templates/index.html
+++ b/templates/index.html
@@ -60,7 +60,7 @@
                     <h1 class="text-white font-weight-bold mb-4">Analyze Assignments using AAnalyze</h1>
                     <p class="text-white mb-5">AAnalyze provides you with the ability to process text like no other.
                         Check your students Assignments in the blink of an eye.</p>
-                    <button onclick="test();" class="btn btn-main-md">Upload Folder</button>
+                    <button onclick="UploadFolder();" class="btn btn-main-md">Upload Folder</button>
                 </div>
                 <div class="col-md-6 text-center order-1 order-md-2">
                     <img class="img-fluid" src="./images/mobile.png" alt="screenshot">
@@ -86,8 +86,9 @@
     </div>
 
     <button onclick="toTopFn()" id="scroll-to-top-btn" title="Go to top">&uarr;</button>
-    <button onclick="toggleView()" id="toggle-view-btn" data-toggle="tooltip" data-placement="top" title="Toggles the view between Progress Bars and Table View">
-            <img src="./images/icons/circle-notch-solid.svg" alt="to circle" srcset="">
+    <button onclick="toggleView()" id="toggle-view-btn" data-toggle="tooltip" data-placement="top"
+        title="Toggles the view between Progress Bars and Table View">
+        <img src="./images/icons/circle-notch-solid.svg" alt="to circle" srcset="">
     </button>
 
 
