--- a/templates/index.html
+++ b/templates/index.html
@@ -61,6 +61,8 @@
                     <p class="text-white mb-5">AAnalyze provides you with the ability to process text like no other.
                         Check your students Assignments in the blink of an eye.</p>
                     <button onclick="UploadFolder();" class="btn btn-main-md">Upload Folder</button>
+                    <button onclick="UploadFile();" class="btn btn-main-md">Upload Folder</button>
+
                 </div>
                 <div class="col-md-6 text-center order-1 order-md-2">
                     <img class="img-fluid" src="./images/mobile.png" alt="screenshot">
