+ single file details page

--- a/templates/index.html
+++ b/templates/index.html
@@ -23,6 +23,8 @@
     <link rel="stylesheet" href="./css/to-top-button.css">
     <link rel="stylesheet" href="./css/progress.css">
     <link rel="stylesheet" href="./css/progress-card-styles.css">
+    <link rel="stylesheet" href="./css/mark_tooltip.css">
+    <link rel="stylesheet" href="./css/single-page-container.css">
 
     <script defer type="text/javascript" src="/eel.js"></script>
     <script defer src="./js/scroll.js"></script>
