--- a/templates/css/style.css
+++ b/templates/css/style.css
@@ -13,16 +13,17 @@
 #view-data-center {
   display: grid;
   place-items: center;
+  padding: 5px;
 }
 
 @keyframes grow {
-	0% {
-		opacity: 0;
-	}
-	
-	100% {
+  0% {
+    opacity: 0;
+  }
+
+  100% {
     opacity: 1;
-	}
+  }
 }
 
 /* width */
