--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>AAnalyze</title>
+    <title>Logoklopi</title>
 
     <link rel="stylesheet" href="plugins/bootstrap/bootstrap.min.css">
     <link rel="stylesheet" href="plugins/aos/aos.css">
@@ -59,7 +59,7 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-md-6 order-2 order-md-1 text-center text-md-left">
-                    <h1 class="text-white font-weight-bold mb-4">Analyze Assignments using AAnalyze</h1>
+                    <h1 class="text-white font-weight-bold mb-4">Analyze Assignments using logoklopi</h1>
                     <p class="text-white mb-5">AAnalyze provides you with the ability to process text like no other.
                         Check your students Assignments in the blink of an eye.</p>
                     <button onclick="UploadFolder();" class="btn btn-main-md">Upload Folder</button>
