--- a/templates/index.html
+++ b/templates/index.html
@@ -59,8 +59,8 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-md-6 order-2 order-md-1 text-center text-md-left">
-                    <h1 class="text-white font-weight-bold mb-4">Analyze Assignments using logoklopi</h1>
-                    <p class="text-white mb-5">AAnalyze provides you with the ability to process text like no other.
+                    <h1 class="text-white font-weight-bold mb-4">Analyze Assignments using Logoklopi</h1>
+                    <p class="text-white mb-5">Logoklopi provides you with the ability to process text like no other.
                         Check your students Assignments in the blink of an eye.</p>
                     <button onclick="UploadFolder();" class="btn btn-main-md">Upload Folder</button>
                     <button onclick="UploadFile();" class="btn btn-main-md">Upload File</button>
